# liftfg

./: .env.example  .gitignore  .taurignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json
api/: Cargo.toml
api/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: environment.rs  lib.rs  utils.rs
core/src/controllers/profile/: create_profile.rs  delete_profile.rs  get_profile.rs  mod.rs  show_profile.rs  store_profile.rs  update_profile.rs
core/src/controllers/user/: mod.rs
core/src/logging/: mod.rs
db/: Cargo.toml
db/src/: data.rs  db.rs  lib.rs
db/src/data/: mod.rs  profile.rs
db/src/entity/: exercise.rs  exercise_muscle.rs  gym.rs  gym_profile.rs  gym_user.rs  mod.rs  muscle.rs  prelude.rs  profile.rs  program.rs  program_target_muscle.rs  seed.rs  set.rs  target_muscle.rs  user.rs  workout.rs  wrappers.rs
db/src/entity/profile/: data.rs  entity.rs  mod.rs
db/src/entity/user/: data.rs  entity.rs  mod.rs
db/src/migration/: common.rs  m20220101_000001_create_profile.rs  m20220101_000001_create_user.rs  m20250114_010338_create_program.rs  m20250115_171424_create_gym.rs  m20250115_173443_create_target_muscle.rs  m20250115_175632_create_exercise.rs  m20250115_192036_create_workout.rs  m20250125_202800_create_seed.rs  m20250125_202800_seed.rs  m20250127_022614_seed0.rs  mod.rs
db/src/seed/: dev.rs  mod.rs
scripts/docgen/: Cargo.toml
scripts/docgen/src/: main.rs
shell/: Cargo.toml  tauri.conf.json  test.tauri.conf.json
shell/capabilities/: default.json
shell/src/: config.rs  handlers.rs  lib.rs  main.rs  plugins.rs  state.rs  utils.rs
shell/src/commands/: mod.rs
shell/src/commands/profile/: create_profile.rs  get_profile.rs  mod.rs  profile_delete.rs  profile_index.rs  profile_show.rs  profile_store.rs  profile_update.rs
shell/src/handlers/: mod.rs  profile.rs  user.rs
shell/src/handlers/profile/: create_profile.rs  get_profile.rs  mod.rs
shell/src/setup/: mod.rs  setup.rs  tests.rs
ui/: Cargo.toml  Dioxus.toml  package-lock.json  package.json
ui/assets/: main.css
ui/src/: bindings.rs  invoke.rs  log.rs  main.rs  old.txt  router.rs  state.rs
ui/src/bindings/: mod.rs
ui/src/components/: dock.rs  mod.rs  navbar.rs
ui/src/components/profile/: mod.rs
ui/src/components/profile/forms/: mod.rs  profile_create.rs  profile_create_form.rs  profile_edit.rs  profile_edit_form.rs
ui/src/components/profile/lists/: mod.rs  profile_list.rs  profile_list_item.rs
ui/src/icons/: mod.rs
ui/src/logging/: mod.rs
ui/src/services/: mod.rs  profile.rs
ui/src/state/: mod.rs
ui/src/views/: container.rs  errors.rs  home.rs  init.rs  layout.rs  loading.rs  mod.rs  not_found.rs  onboard.rs  profile.rs  program.rs
ui/src/views/profile/: mod.rs  profile_create_view.rs  profile_edit_view.rs  profile_index_view.rs  profile_show_view.rs
ui/styles/: tailwind.css
utils/: Cargo.toml
utils/src/: lib.rs
