[package]
name = "fgapi"
version = "0.1.0"
edition = "2024"

[dependencies]
api = { path = "../api" }
migration = { path = "../migration" }
tokio = { workspace = true }
anyhow = { workspace = true }
sea-orm = { workspace = true }
clap = { version = "4.5.26", features = ["cargo"] }
sea-orm-migration = { workspace = true }
