[package]
name = "fgcore"
version = "0.1.0"
edition = "2021"

[dependencies]
fgdb = { path = "../db", features = ["db"] }
fgutils = { path = "../utils" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }
time = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
validator = { workspace = true }
