[package]
name = "fgdb"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
fgutils = { path = "../utils" }

tokio = { workspace = true }
anyhow = { workspace = true }
sea-orm-migration = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-schema = "0.16.1"
sea-orm-codegen = "1.1.4"
validator = { workspace = true }
