[package]
name = "fgdb"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
fgutils = { path = "../utils" }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
anyhow = { workspace = true }

# Only enable database features when NOT in WASM
tokio = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
sea-orm-migration = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
sea-schema = { version = "0.16.1", optional = true }
sea-orm-codegen = { version = "1.1.4", optional = true }
chrono = { workspace = true }
# Enable default dependencies except for WASM builds
[features]
default = []
db = [
    "tokio",
    "sea-orm",
    "sea-orm-migration",
    "tracing",
    "sea-schema",
    "sea-orm-codegen",
]
