[package]
name = "liftfgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fgdb = { path = "../db", default-features = false }
fgutils = { path = "../utils" }

dioxus = { version = "0.6", features = ["web", "router"] }
dioxus-cli-config = { version = "0.6" }
dioxus-logger = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
tracing = { workspace = true }
log = { workspace = true }
validator = { workspace = true }
gloo-timers = { version = "0.3", features = ["futures"] }


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
